--- a/resources/assets/style.css
+++ b/resources/assets/style.css
@@ -48,3 +48,9 @@ padding: 10px 15px;
 margin-top: 5px;
 }
 
+@media (min-width: 768px) and (max-width: 1000px) {
+   .collapse {
+       display: none !important;
+   }
+}
+
